[metadata]
name = runcmd
version = 2018.11.20
url = https://github.com/looking-for-a-job/runcmd.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = run command

[options]
install_requires = 
	psutil
	public
	setuptools
packages = 
	runcmd
